Fixing wrap

--- a/sass/document.scss
+++ b/sass/document.scss
@@ -110,6 +110,7 @@ html {
                 > .resources {
                     display: flex;
                     flex-direction: row;
+                    flex-wrap: wrap;
                     justify-content: space-around;
                     align-items: stretch;
 
